# psion-organiser-recreate-c

./: .gitignore  .gitmodules  README.md
no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/: abc
psion-recreate/: #pack_access.txt#  #trace.txt#  #x.txt#  .#pack_access.txt  .#x.txt  CMakeLists.txt  display.c  display.h  display.h~  do_cmake  do_cmake_debug  eeprom.c  emulator.c  emulator.c~  flash_code.sh  flash_code.sh~  font.c  font.c~  font.h  i2c.c  menu.c  menu.h  new_pruned.c~  nos.h  nos.h~  old_pruned.c~  pack_access.txt~  paged_eeprom.c  paged_eeprom.c~  psion_recreate.c  psion_recreate.c~  psion_recreate.h  psion_recreate_all.h  record.h  rosc.c  rtc.c~  serial.c  serial.c~  serial.h  set_debug_openocd  (+31 more)
psion-recreate/od/: Makefile  psion_recreate.dis  psion_recreate.elf  psion_recreate.elf.map  psion_recreate.uf2
psion-recreate/od/elf2uf2/boot_uf2_headers/: Makefile
psion-recreate/od/pico-sdk/: Makefile
psion-recreate/od/pico-sdk/docs/: Makefile
psion-recreate/od/pico-sdk/src/: Makefile
psion-recreate/od/pico-sdk/src/common/: cmake_install.cmake
psion-recreate/od/pico-sdk/src/common/boot_picoboot/: Makefile
psion-recreate/od/pico-sdk/src/rp2040/: cmake_install.cmake
psion-recreate/od/pico-sdk/src/rp2_common/: Makefile
psion-recreate/od/pico-sdk/src/rp2_common/boot_stage2/: bs2_default_padded_checksummed.S
psion-recreate/od/pico-sdk/src/rp2_common/cmsis/: Makefile
psion-recreate/od/pico-sdk/src/rp2_common/cyw43_driver/: Makefile
psion-recreate/od/pico-sdk/src/rp2_common/hardware_gpio/: Makefile
psion-recreate/od/pico-sdk/src/rp2_common/hardware_resets/: Makefile
psion-recreate/od/pico-sdk/src/rp2_common/hardware_vreg/: Makefile
psion-recreate/od/pico-sdk/src/rp2_common/pico_double/: Makefile
psion-recreate/od/pico-sdk/src/rp2_common/pico_float/: Makefile
psion-recreate/od/pico-sdk/src/rp2_common/pico_runtime/: Makefile
psion-recreate/od/pico-sdk/src/rp2_common/pico_stdio_uart/: Makefile
psion-recreate/od/pico-sdk/src/rp2_common/tinyusb/: Makefile
psion-recreate/od/pioasm/: cmake_install.cmake
psion-recreate/oldbuild/: flash_code.sh~
psion-recreate/oldbuilkd/: CMakeCache.txt  Makefile  psion_recreate.elf  psion_recreate.elf.map  psion_recreate.hex  psion_recreate.uf2
psion-recreate/oldbuilkd/elf2uf2/: CMakeCache.txt  Makefile
psion-recreate/oldbuilkd/pico-sdk/: Makefile  cmake_install.cmake
psion-recreate/oldbuilkd/pico-sdk/docs/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/: Makefile  cmake_install.cmake
psion-recreate/oldbuilkd/pico-sdk/src/common/: Makefile  cmake_install.cmake
psion-recreate/oldbuilkd/pico-sdk/src/common/boot_picoboot/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/common/boot_uf2/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/common/pico_base/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/common/pico_binary_info/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/common/pico_bit_ops/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/common/pico_divider/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/common/pico_stdlib/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/common/pico_sync/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/common/pico_time/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/common/pico_usb_reset_interface/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/common/pico_util/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
psion-recreate/oldbuilkd/pico-sdk/src/rp2040/hardware_regs/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/rp2040/hardware_structs/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
psion-recreate/oldbuilkd/pico-sdk/src/rp2_common/boot_stage2/: Makefile  bs2_default.dis
psion-recreate/oldbuilkd/pico-sdk/src/rp2_common/cmsis/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/rp2_common/cyw43_driver/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/rp2_common/hardware_adc/: Makefile
psion-recreate/oldbuilkd/pico-sdk/src/rp2_common/hardware_base/: Makefile
psion-recreate/oldbuilkd/pico-sdk/tools/: Makefile
psion-recreate/oldbuilkd/pioasm/: CMakeCache.txt  cmake_install.cmake
psion_recreate_tiny_2/: .gitignore  CMakeLists.txt  cdc.h  clock_pico.c  core1.c  cursor.c  cursor.h  display.c  display.h  display_driver.c  display_driver.h  do_cmake  eeprom.c  emulator.h  extstfiles0.txt  file_handling.c  flash_code.sh  font.c  font.h  i2c.c  i2c.h  lcdspi.c  main.c  menu.c  menu.h  msc_disk.c  newopl_exec.h  newopl_lib.c  nopl.h  nopl_exec.c  nopl_obj.h  nopl_trans.c  num_a.c  oled_er_oledm015_2.c  opl.c  opl.h  panel.c  parser.c  parser.h  psion_recreate.c  (+35 more)
psion_recreate_tiny_2/oldbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  psion_recreate_ctusb.dis  usb_own_descriptors_multicore.dis  usb_own_descriptors_multicore.elf  usb_own_descriptors_multicore.elf.map  usb_own_descriptors_multicore.uf2
psion_recreate_tiny_2/oldbuild/pico-sdk/: Makefile  cmake_install.cmake
psion_recreate_tiny_2/oldbuild/pico-sdk/docs/: Makefile
psion_recreate_tiny_2/oldbuild/pico-sdk/src/: Makefile  cmake_install.cmake
psion_recreate_tiny_2/oldbuild/pico-sdk/tools/: Makefile
psion_recreate_tiny_2_pico2/: CMakeLists.txt  buils  cdc.c  core1.c  core1.h  cursor.c  cursor.h  db1.txt  display.c  display_driver.c  display_driver.h  eeprom.c  emulator.h  er.h  errors.c  file_handling.c  file_handling.h  flash_code.sh  font.c  font.h  font1.h  howto_add_qcode.txt  hw_config.c  hwmain.c  i2c.c  i2ckbd.c  i2ckbd.h  lcdspi.c  lcdspi.h  logical_files.c  main.c  memmap_custom.ld  menu.c  menu.h  newopl.h  newopl_all.h  newopl_lib.c  newopl_lib.c.backup  newopl_lib.h  newopl_objdump.h  (+51 more)
psion_recreate_tiny_2_pico2/oldbuild/: CMakeCache.txt  Makefile
psion_recreate_tiny_2_pico2/oldbuild/pico-sdk/: cmake_install.cmake
psion_recreate_tiny_2_pico2/oldbuild/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
psion_recreate_tiny_2_pico2/oldbuild/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
test_usb/: CMakeLists.txt  svc_kb.c
(+494 files in other folders)
